# saki

./: .gitignore  Cargo.toml  Tiltfile  flake.nix  kind.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  rust-toolchain.toml
gateway/: Cargo.toml
gateway/src/: main.rs
image-getter/: Cargo.toml
image-getter/src/: main.rs
protos/: build.rs
protos/proto/: helloworld.proto
services/database/: Cargo.toml  package.json
services/database/prisma/: schema.prisma
services/database/src/: config.rs  main.rs
services/database/src/types/: filemeta.rs  mod.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: main.rs
services/image-getter/: Cargo.toml
services/image-getter/src/: main.rs
services/protos/: Cargo.toml  build.rs
services/protos/proto/: database.proto
