[workspace]
resolver = "2"
members = ["image-getter", "gateway", "protos"]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.15" }
tonic-build = "0.12"

# Workspace dependencies
protos = { path = "./protos/" }
