[workspace]
resolver = "2"
members = [
    "services/image-getter",
    "services/gateway",
    "services/protos",
    "services/database",
]

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
] }
tokio-stream = { version = "0.1.15" }
tonic-build = "0.12"
anyhow = "1.0.86"
dotenv = "0.15.0"

# Workspace dependencies
protos = { path = "./services/protos/" }
