[package]
name = "database"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
protos = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql"] }
anyhow = { workspace = true }
dotenv = { workspace = true }
